blocks: adding margin to col instead of row so applied on smaller screens fixes #198

--- a/apps/core/static/scss/_blocks.scss
+++ b/apps/core/static/scss/_blocks.scss
@@ -58,7 +58,7 @@
         border-bottom: none;
     }
 
-    .row {
+    .col-md-6 {
         margin-bottom: $spacer-v/2;
     }
 
